# libnomp

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.html  cmake_install.cmake  developer-docs.html  environment-dev.yml  environment.yml  examples.html  genindex.html  index.html  internal-api.html  lnbuild  lncfg  lninstall  lnmake  nomp-usage.html  nomp.sh  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  usage.html  user-api.html
.doctrees/: build.doctree  developer-docs.doctree  environment.pickle  examples.doctree  index.doctree  internal-api.doctree  nomp-usage.doctree  usage.doctree  user-api.doctree
.github/workflows/: ci.yml  clang-format-check.yml  clang-format.yml  docs.yml  lint.yml  pylint.yml  python-static.yml
_sources/: build.rst.txt  index.rst.txt  internal-api.rst.txt  nomp-usage.rst.txt  user-api.rst.txt
backends/: cuda.c  hip.c  ispc.c  opencl.c  sycl.cpp  unified-cuda-hip-impl.h
cmake/: FindDPCPP.cmake  FindHIP.cmake  FindProgram.cmake  FindSymEngine.cmake  clang-format.cmake  clangformat.cmake  nomp-config.cmake.in  pylint.cmake  python-static.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  build.rst  conf.py  developer-docs.rst  examples.rst  index.rst  internal-api.rst  nomp-impl.rst  nomp-usage.rst  nomp.rst  usage.rst  user-api.rst
docs/_static/: main_stylesheet.css
doxygen/xml/: Doxyfile.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  group__nomp__backend__utils.xml  group__nomp__compile__utils.xml  group__nomp__errors.xml  group__nomp__log__utils.xml  group__nomp__mem__utils.xml  group__nomp__other__utils.xml  group__nomp__profiler__utils.xml  group__nomp__py__utils.xml  group__nomp__reduction__ops.xml  group__nomp__types.xml  group__nomp__user__api.xml  index.xml  nomp-aux_8h.xml  nomp-impl_8h.xml  nomp-jit_8h.xml  nomp-log_8h.xml  nomp-loopy_8h.xml  nomp-mem_8h.xml  nomp-reduction_8h.xml  nomp_8h.xml  structnomp__arg__t.xml  structnomp__backend__t.xml  structnomp__mem__t.xml  structnomp__prog__t.xml
examples/annotations/: sem.py
include/: nomp-aux.h  nomp-defs.h  nomp-defs.h.in  nomp-impl.h  nomp-jit.h  nomp-log.h  nomp-loopy.h  nomp-mem.h  nomp-reduction.h  nomp.h
python/: c_to_loopy.py  ispc_api.py  kernel.py  kernel_wrapper.py  kernel_wrappers.py  loopy.py  loopy_api.py  reduction.py
python/wrappers/: __init__.py
scripts/: build_linux.sh  c_to_loopy.py  lnrun
src/: aux.c  auxiliary.c  compile.c  cuda.c  gnomp-impl.h  gnomp.c  gnomp.h  hip.c  hip.cpp  init.c  ispc.c  jit.c  log.c  loopy.c  lpy.c  mem.c  nomp-aux.h  nomp-impl.h  nomp-jit.h  nomp-log-str.c  nomp-log-str.h  nomp-log.c  nomp-log.h  nomp-loopy.h  nomp-lpy.h  nomp-mem.c  nomp-mem.h  nomp-reduction.h  nomp.c  nomp.h  opencl.c  reduction.c  sycl-opencl.cpp  sycl.cpp  symengine.c  unified-cuda-hip-impl.h
tests/: CMakeLists.txt  nomp-api-00.c  nomp-api-000.c  nomp-api-01.c  nomp-api-020.c  nomp-api-021.c  nomp-api-040.c  nomp-api-050-impl.h  nomp-api-050.c  nomp-api-051.c  nomp-api-052.c  nomp-api-053.c  nomp-api-060.c  nomp-api-080.c  nomp-api-080.txt  nomp-api-081.c  nomp-api-081.txt  nomp-api-082.c  nomp-api-082.txt  nomp-api-090.c  nomp-api-090.txt  nomp-api-091.c  nomp-api-092.c  nomp-api-092.txt  nomp-api-093.c  nomp-api-093.txt  nomp-api-10.c  nomp-api-100-double.c  nomp-api-100-float.c  nomp-api-100-impl.h  nomp-api-100-int.c  nomp-api-100-long.c  nomp-api-100-unsigned.c  nomp-api-100.c  nomp-api-100.py  nomp-api-101-double.c  nomp-api-101-float.c  nomp-api-101-int.c  nomp-api-101-long.c  nomp-api-102-impl.h  (+104 more)
